--- a/src/app/allModules/authentication/login/login.component.html
+++ b/src/app/allModules/authentication/login/login.component.html
@@ -41,7 +41,7 @@
           <span class="loginButton">LOG IN ></span>
         </button>
 
-        <a class="link" href="/#/register/vendor">Click here to regster</a>
+        <a class="link" href="/#/register/vendor">Click here to register</a>
 
       </form>
       <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="ProgressBarPostion" color="accent"
