--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -1,7 +1,56 @@
 <div id="dashboard" class="page-layout carded" fusePerfectScrollbar>
-  <div class="center" fxLayout="column" fxLayoutGap="10px">
-    <div class="sidenav-content px-24 mt-4" fxFlex>
-      <div fxLayout="row" fxLayoutAlign="space-between center" style="margin-bottom: 20px;">
+  <div class="center">
+    <div class="sidenav-content px-24 mt-4" fxFlex fxLayout="column">
+      <div fxFlex style="margin-bottom: 50px !important;">
+        <div class="container m-12" fxLayout fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="center"
+          fxLayoutGap="10px" fxLayoutGap.xs="10">
+          <div fxFlex="33" (click)="tabone()">
+            <div class="container" fxLayout fxLayoutAlign="center" fxLayoutGap="10px">
+              <div class="open-round1">
+                <div style="margin-top: 3px; margin-left: 60px;">
+                  <span [matBadge]="OpenCount" matBadgeColor="#8ba0f9" matBadgeOverlap="false"></span>
+                </div>
+                <div class="open-round2">
+                  <img style="margin-top: 16px !important;margin-left: 21px !important;" src="assets/images/notes.png">
+                  <div style="margin-top: 20px;margin-left: 20px;">Open</div>
+                  <div *ngIf="tabCount === 1" class="tab-highlight"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-divider"></div>
+          <div fxFlex="33" (click)="tabtwo()">
+            <div class="container" fxLayout fxLayoutAlign="center" fxLayoutGap="10px">
+              <div class="approved-round1">
+                <div style="margin-top: 3px; margin-left: 60px;">
+                  <span [matBadge]="ApprovedCount" matBadgeColor="#8ba0f9" matBadgeOverlap="false"></span>
+                </div>
+                <div class="approved-round2">
+                  <img style="margin-top: 14px !important;margin-left: 17px;" src="assets/images/surface1.png">
+                  <div style="margin-top: 19px;margin-left: 12px;">Approved</div>
+                  <div *ngIf="tabCount === 2" class="tab-highlight"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-divider"></div>
+          <div fxFlex="33" (click)="tabthree()">
+            <div class="container" fxLayout fxLayoutAlign="center" fxLayoutGap="10px">
+              <div class="rejected-round1">
+                <div style="margin-top: 3px; margin-left: 60px;">
+                  <span [matBadge]="RejectedCount" matBadgeColor="#8ba0f9" matBadgeOverlap="false"></span>
+                </div>
+                <div class="rejected-round2">
+                  <img style="margin-top: 15px !important;margin-left: 14px;" src="assets/images/phone.png">
+                  <div style="margin-top: 18px;margin-left: 14px;">Rejected</div>
+                  <div *ngIf="tabCount === 3" class="tab-highlight"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div style="margin-bottom: 30px !important;" fxFlex fxLayout="row" fxLayoutAlign="space-between center">
         <div class="search" fxFlex fxLayout="row" fxLayoutAlign="start center">
           <mat-icon class="s-16">search</mat-icon>
           <input [(ngModel)]="searchText" type="text" placeholder="Search" fxFlex>
@@ -14,39 +63,27 @@
           </mat-form-field> -->
         </div>
       </div>
-      <div fxLayout>
+      <div fxFlex fxLayout="column">
         <table *ngIf="AllVendorOnBoardings?.length" class="table" mat-table [dataSource]="VendorOnBoardingsDataSource"
           matSort>
 
-          <ng-container matColumnDef="TransID">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> TransID </th>
+          <ng-container matColumnDef="Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element;let odd=odd" class="tableLeftBorder pl-0">
               <div fxLayout>
                 <div class="tableCellBorder" [style.background-color]="odd?'#6f52ed':'#d87e39'"></div>
-                <div fxFlex class="pl-4">{{element.TransID}} </div>
+                <div fxFlex class="pl-4">{{element.Name}} </div>
               </div>
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element">
-              {{element.Name}} </td>
-          </ng-container>
-
           <ng-container matColumnDef="LegalName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Legal Name </th>
-            <td mat-cell *matCellDef="let element">
-              {{element.LegalName}} </td>
-          </ng-container>
-
-          <!-- <ng-container matColumnDef="LegalName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> LegalName </th>
             <td mat-cell *matCellDef="let element">
               <span class="next">{{element.LegalName}}
               </span>
             </td>
-          </ng-container> -->
+          </ng-container>
 
           <ng-container matColumnDef="Type">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
@@ -75,6 +112,12 @@
           <ng-container matColumnDef="CreatedOn">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
             <td mat-cell *matCellDef="let element"> {{element.CreatedOn | date :'dd/MM/yyyy'}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.Status}} </td>
           </ng-container>
 
           <!-- <ng-container matColumnDef="Status">
@@ -130,8 +173,8 @@
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action </th>
             <td mat-cell *matCellDef="let element" style="text-align: center;">
-              <button mat-stroked-button style="cursor: pointer !important;"
-                (click)="ReviewAndApproveVendor(element)">Approve</button>
+              <button mat-stroked-button style="background-color: #efb577;
+              color: white;cursor: pointer !important;" (click)="ReviewAndApproveVendor(element)">Review</button>
             </td>
           </ng-container>
 
@@ -140,6 +183,15 @@
             style=" cursor: pointer;">
           </tr>
         </table>
+        <div flex>
+          <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
+          </mat-paginator>
+        </div>
+        <div flex *ngIf="!AllVendorOnBoardings?.length">
+          <mat-icon svgIcon="infoIcon" style="color: #1b56ca;margin-top: 10px;margin-left: 70px">
+          </mat-icon>
+          <span style="margin-left: 10px;">The table does not contain any data</span>
+        </div>
       </div>
     </div>
   </div>
